@@ -1,8 +1,9 @@
 plugins {
     id("java")
+    id("com.diffplug.spotless") version "6.22.0"
 }
 
-group = "org.example"
+group = "io.github.yusufsdiscordbot"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -10,10 +11,78 @@ repositories {
 }
 
 dependencies {
+    implementation("org.javacord:javacord:3.8.0")
+    implementation("io.github.realyusufismail:jconfig:1.0.9")
+    implementation("io.github.classgraph:classgraph:4.8.161")
+    implementation("ch.qos.logback:logback-classic:1.4.7")
+    implementation("ch.qos.logback:logback-core:1.4.7")
+    implementation("uk.org.lidalia:sysout-over-slf4j:1.0.2")
+    compileOnly("org.projectlombok:lombok:1.18.30")
+    annotationProcessor("org.projectlombok:lombok:1.18.30")
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
+}
+
+configurations {
+    all { exclude(group = "org.slf4j", module = "slf4j-log4j12") }
+    compileOnly { extendsFrom(configurations.annotationProcessor.get()) }
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+
+    withSourcesJar()
+    withJavadocJar()
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
+}
+
+
+spotless {
+    kotlinGradle {
+        target("**/*.gradle.kts")
+        ktfmt("0.42").dropboxStyle()
+        trimTrailingWhitespace()
+        indentWithSpaces()
+        endWithNewline()
+    }
+
+    java {
+        target("**/*.java")
+        googleJavaFormat()
+        trimTrailingWhitespace()
+        indentWithSpaces()
+        endWithNewline()
+        licenseHeader(
+            """/*
+ * Copyright 2023 RealYusufIsmail.
+ *
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ *
+ * you may not use this file except in compliance with the License.
+ *
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */ """)
+    }
 }
